--- a/header.tex
+++ b/header.tex
@@ -1,5 +1,18 @@
 \usepackage[italian]{babel}
+\usepackage{newlfont}
+\textwidth=450pt\oddsidemargin=0pt
 \usepackage{tikz}
 \usepackage{verbatim}
 \usepackage{listings}
+\usepackage{graphicx}
 \usepackage{syntax}
+\setcounter{secnumdepth}{3}
+\setcounter{tocdepth}{1}
+\lstdefinelanguage{Solidity}{
+  keywords={break, case, catch, continue, debugger, default, delete, do, else, finally, for, function, if, in, instanceof, new, return, switch,  this, throw, try, typeof, var, void, while, with, contract, interface},
+  morecomment=[l]{//},
+  morecomment=[s]{/*}{*/},
+  morestring=[b]',
+  morestring=[b]",
+  sensitive=true
+}
