--- a/header.tex
+++ b/header.tex
@@ -1,6 +1,6 @@
 \usepackage[italian]{babel}
 \usepackage{newlfont}
-\textwidth=450pt\oddsidemargin=0pt
+\textwidth=450pt\oddsidemargin=0pt\evensidemargin=0pt
 \usepackage{tikz}
 \usepackage{verbatim}
 \usepackage{listings}
